--- a/src/template.html
+++ b/src/template.html
@@ -1,3 +1,4 @@
+<!--suppress ALL -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
 
     %sapper.base%
 
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -29,5 +30,6 @@
 <!-- The application will be rendered inside this element,
      because `src/client.js` references it -->
 <div id="sapper">%sapper.html%</div>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
